# id-address

./: .gitignore  COLAB_SNIPPETS.md  LICENSE  README.md  ROADMAP.md  agent.md  pyproject.toml
id_address/: __init__.py  administrative.py  cli.py  geocoder.py  models.py  parser.py
tests/: test_parser.py
