[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id-address"
version = "0.1.0"
description = "Indonesian address parser and geocoder — parse RT/RW, Kelurahan, Kecamatan, and geocode to coordinates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Verry Simatupang", email = "verrysimatupang99@gmail.com"},
]
keywords = ["indonesia", "address", "parser", "geocoder", "ktp", "administrative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
    "thefuzz>=0.19",  # Fuzzy string matching
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/verrysimatupang99/id-address"
Repository = "https://github.com/verrysimatupang99/id-address"
Issues = "https://github.com/verrysimatupang99/id-address/issues"

[tool.setuptools.packages.find]
include = ["id_address*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
