[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id-address"
version = "0.1.0a3"
description = "Indonesian address parser and geocoder"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Verry Simatupang", email = "verrysimatupang99@gmail.com"},
]
keywords = ["indonesia", "address", "geocoding", "parsing", "alamat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
    "thefuzz>=0.19",  # Fuzzy string matching
    "click>=8.0",     # CLI interface
]

[project.scripts]
id-address = "id_address.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "vcrpy>=4.0",
    "pytest-vcr>=1.0",
]

[project.urls]
Homepage = "https://github.com/verrysimatupang99/id-address"
Repository = "https://github.com/verrysimatupang99/id-address"
Issues = "https://github.com/verrysimatupang99/id-address/issues"

[tool.setuptools.packages.find]
include = ["id_address*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
